--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -39,7 +39,8 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  width: 100vw;
+  height: 100vh; /* fallback for Js load */
+  height: var(--doc-height);
 }
 
 a {
