--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -74,9 +74,9 @@ a {
 }
 
 .stacksvg {
-  @apply w-10 sm:w-12 md:w-14 lg:w-16;
+  @apply w-12 sm:w-14 lg:w-16 p-1;
 }
 
 .contactsvg {
-  @apply w-10 md:w-12 xl:w-14;
+  @apply w-12 lg:w-14 xl:w-16 p-1;
 }
